[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "swamp-controller"
version = "0.1.0"
description = "Interactive controller for Crestron SWAMP media amplifier"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0.1",
    "prompt-toolkit>=3.0.43",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[project.scripts]
swamp = "swamp.__main__:main"
